--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+CRYPT_KEY=wvRJ%FZFkN9*71a7F&q@cEV$y^aY
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
